Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32439

INSERT IGNORE on constraints result in ERROR rather than warning

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.11.4, 10.4.31
    • 11.4.1
    • MySQL version: 10.11.4-MariaDB-1:10.11.4+maria~ubu2204 through PHP extension MySQLi

    Description

      The following INSERT IGNORE emits an error instead of a warning:

      DROP TABLE IF EXISTS `my_table`;

      CREATE TABLE `my_table` (
      `first_col` char(63),
      `second_col` char(63),
      constraint `my_const` check (`first_col` != `second_col`)
      );

      INSERT IGNORE INTO `my_table` VALUES ('a', 'a');

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              jkoop Joe Koop
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.